Passage Red hot

--- a/index.html
+++ b/index.html
@@ -35,47 +35,45 @@
     </nav>
     <hr>
     <div id="groupImg">
-        <img src="images/epica.jpg" alt="groupe epica">
+        <img src="images/Red-Hot-Chili-Peppers-unlimited-love.jpeg" alt="groupe red hot chili peppers">
     </div>
     <article>
 
-        <h3>Biographie : Epica</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi commodi consequuntur delectus dolores fuga!
-            Alias
-            aliquam aut excepturi, impedit minima non sed similique? Autem et libero quisquam! Culpa, minima, quae.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur consequuntur enim fuga nemo quaerat!
-            Amet
-            assumenda, autem consequatur delectus dicta dolorum enim incidunt iste modi nihil officia quas reiciendis
-            vitae?</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium aut commodi culpa ex hic mollitia neque
-            nobis, non odio omnis rerum saepe soluta tempora veniam, vitae! Molestiae quis voluptatibus voluptatum.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid eius enim fuga illum ipsa ipsam maiores
-            officiis pariatur placeat quibusdam quidem quisquam ratione, suscipit, temporibus voluptatum. Blanditiis
-            recusandae similique tempore?</p>
+        <h3>Biographie : Red Hot Chili Peppers</h3>
+
+        <p>Les Red Hot Chili Peppers (prononcé en anglais : [ɹɛd hɑt ˈtʃɪli ˈpɛpəz], parfois abrégé RHCP ou plus simplement Red Hot ou les Chilis) sont un groupe de funk rock américain, originaire de Los Angeles, en Californie. Il est formé en 1983 par Anthony Kiedis (chant) et Michael Balzary (surnommé « Flea », basse), auxquels se joignent Hillel Slovak (guitare) et Jack Irons (batterie). Les Red Hot Chili Peppers adoptent une identité artistique forte dès leurs débuts, qui fera la renommée du groupe : des prestations scéniques considérées comme énergiques et magistrales, une technicité et une virtuosité instrumentales, ainsi que des textes profonds sur des thèmes comme l'amitié, l'amour, la sexualité et la drogue. La musique des Red Hot Chili Peppers se caractérise par le mélange de plusieurs genres musicaux, tels le funk rock, le rock alternatif, le funk metal et le rap rock. En 1983, le quatuor signe un premier contrat avec EMI Records. Cependant, Hillel Slovak et Jack Irons sont parallèlement engagés avec le groupe What Is This?, et sont respectivement remplacés par Jack Sherman et Cliff Martinez pour la sortie du premier album The Red Hot Chili Peppers en 1984. </p>
+
+        <p>Après la dissolution de What Is This?, le groupe réintègre ses membres originels et enregistre Freaky Styley (1985) puis The Uplift Mofo Party Plan (1987). En 1988, Hillel Slovak meurt d'une surdose d'héroïne. Jack Irons fait une dépression et quitte le groupe. John Frusciante, un grand fan des Red Hot Chili Peppers, est engagé pour remplacer Slovak, tandis que Chad Smith officie en tant que nouveau batteur. Dès 1989, le groupe enregistre Mother's Milk, qui lui confère une notoriété internationale. En 1991, le quatuor change de label pour Warner Bros Records et entame une longue collaboration avec le producteur Rick Rubin. Le groupe atteint la consécration avec la sortie de l'album Blood Sugar Sex Magik et ses cinq singles, dont Give It Away, Under the Bridge et Suck My Kiss qui le propulsent sur des scènes à travers le monde. La tournée qui s'ensuit est marquée par le départ de John Frusciante, qui ne supporte pas cette notoriété soudaine et sombre dans la toxicomanie. Dave Navarro lui succède pour l'enregistrement de son unique album avec le groupe, One Hot Minute, en 1995. </p>
+        <p>Après plusieurs années de soins, Frusciante réintègre les Red Hot Chili Peppers en 1999, qui enregistrent Californication. L'album, qui comprend les singles Scar Tissue et Californication, est un nouveau succès international pour le groupe. Après les albums By The Way (2002) et Stadium Arcadium (2006) et la réussite de leurs tournées respectives, John Frusciante quitte de nouveau le groupe en 2009 pour se consacrer à ses projets personnels. Il est remplacé par un de ses amis, avec lequel il a collaboré au sein du groupe Ataxia, Josh Klinghoffer. Deux ans plus tard, le groupe publie I'm With You, le premier album avec Klinghoffer à la guitare, qui apporte de nouvelles influences musicales au groupe, avec l'incorporation d'éléments de musique électronique. En 2016, après près de vingt ans de travail avec Rick Rubin, les Red Hot Chili Peppers changent de producteur et choisissent Danger Mouse pour l'enregistrement de l'album The Getaway. Le 15 décembre 2019, les RHCP annoncent le retour de John Frusciante pour remplacer Josh Klinghoffer. </p>
+
 
     </article>
     <div id="infosGroup">
         <section>
             <h3>Discographie</h3>
             <ul id="discography">
-                <li>Titre Album 1 - Année de sortie</li>
-                <li>Titre Album 2 - Année de sortie</li>
-                <li>Titre Album 3 - Année de sortie</li>
-                <li>Titre Album 4 - Année de sortie</li>
-                <li>Titre Album 5 - Année de sortie</li>
-                <li>Titre Album 6 - Année de sortie</li>
-                <li>Titre Album 7 - Année de sortie</li>
+                <li>The Red Hot Chili Peppers - 1984</li>
+                <li>Freaky Styley - 1985</li>
+                <li>The Uplift Moto Party Plan - 1987</li>
+                <li>Mother's Milk - 1989</li>
+                <li>Blood Sugar Sex Magik - 1991</li>
+                <li>One Hot Minute - 1995</li>
+                <li>Californication - 1999</li>
+                <li>By the Way - 2002</li>
+                <li>Stadium Arcadium - 2006</li>
+                <li>I'm With You - 2011</li>
+                <li>The Getaway - 2016</li>
+                <li>Unlimited Love - 2022</li>
             </ul>
         </section>
         <section>
             <h3>Membres</h3>
             <ul id="membership">
-                <li>Membre 1 - chant, guitare</li>
-                <li>Membre 2 - chant, guitare</li>
-                <li>Membre 3 - chant, guitare</li>
-                <li>Membre 4 - basse</li>
-                <li>Membre 5 - clavier</li>
-                <li>Membre 6 - batterie</li>
+                <li>Anthony Kiedis - chant (depuis 1983)</li>
+                <li>Flea - basse, piano, trompette, choeurs (depuis 1983)</li>
+                <li>Chad Smith - batterie, percussions (depuis 1988)</li>
+                <li>John Frusciante - guitare, choeurs (1988-1992, 1998-2009, depuis 2019)</li>
+
             </ul>
         </section>
     </div>
