--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>My music</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -10,7 +10,7 @@
     <a href="index.html"><img src="images/mymusic_logo.png" alt="logo mymusic"></a>
 
     <h1>My Music</h1>
-    <h2>Epica</h2>
+    <h2>Red Hot Chili Peppers</h2>
     <div id="userStatus">
         <img src="images/avatar/avatar-tux_picachu.jpg" alt="avatar utilisateur" id="userAvatar">
         <div id="userStatus_title">
@@ -18,7 +18,7 @@
             <p id="connexionStatus">connecté</p>
         </div>
         <div>
-            <a href="monCompte.html">Mon compte</a> |
+            <a href="formulaire.html">Mon compte</a> |
             <a href="index.html">Déconnexion</a>
         </div>
     </div>
@@ -40,11 +40,43 @@
     <article>
 
         <h3>Biographie : Red Hot Chili Peppers</h3>
+        <div>
+            <img src="images/red-hot-chili-peppers-logo-i4622.jpg" id="logo_rhcp" alt="logo red hot">
+            <p>Les Red Hot Chili Peppers (prononcé en anglais : [ɹɛd hɑt ˈtʃɪli ˈpɛpəz], parfois abrégé RHCP ou plus
+                simplement Red Hot ou les Chilis) sont un groupe de funk rock américain, originaire de Los Angeles, en
+                Californie. Il est formé en 1983 par Anthony Kiedis (chant) et Michael Balzary (surnommé « Flea »,
+                basse), auxquels se joignent Hillel Slovak (guitare) et Jack Irons (batterie). Les Red Hot Chili Peppers
+                adoptent une identité artistique forte dès leurs débuts, qui fera la renommée du groupe : des
+                prestations scéniques considérées comme énergiques et magistrales, une technicité et une virtuosité
+                instrumentales, ainsi que des textes profonds sur des thèmes comme l'amitié, l'amour, la sexualité et la
+                drogue. La musique des Red Hot Chili Peppers se caractérise par le mélange de plusieurs genres musicaux,
+                tels le funk rock, le rock alternatif, le funk metal et le rap rock. En 1983, le quatuor signe un
+                premier contrat avec EMI Records. Cependant, Hillel Slovak et Jack Irons sont parallèlement engagés avec
+                le groupe What Is This?, et sont respectivement remplacés par Jack Sherman et Cliff Martinez pour la
+                sortie du premier album The Red Hot Chili Peppers en 1984. </p>
 
-        <p>Les Red Hot Chili Peppers (prononcé en anglais : [ɹɛd hɑt ˈtʃɪli ˈpɛpəz], parfois abrégé RHCP ou plus simplement Red Hot ou les Chilis) sont un groupe de funk rock américain, originaire de Los Angeles, en Californie. Il est formé en 1983 par Anthony Kiedis (chant) et Michael Balzary (surnommé « Flea », basse), auxquels se joignent Hillel Slovak (guitare) et Jack Irons (batterie). Les Red Hot Chili Peppers adoptent une identité artistique forte dès leurs débuts, qui fera la renommée du groupe : des prestations scéniques considérées comme énergiques et magistrales, une technicité et une virtuosité instrumentales, ainsi que des textes profonds sur des thèmes comme l'amitié, l'amour, la sexualité et la drogue. La musique des Red Hot Chili Peppers se caractérise par le mélange de plusieurs genres musicaux, tels le funk rock, le rock alternatif, le funk metal et le rap rock. En 1983, le quatuor signe un premier contrat avec EMI Records. Cependant, Hillel Slovak et Jack Irons sont parallèlement engagés avec le groupe What Is This?, et sont respectivement remplacés par Jack Sherman et Cliff Martinez pour la sortie du premier album The Red Hot Chili Peppers en 1984. </p>
-
-        <p>Après la dissolution de What Is This?, le groupe réintègre ses membres originels et enregistre Freaky Styley (1985) puis The Uplift Mofo Party Plan (1987). En 1988, Hillel Slovak meurt d'une surdose d'héroïne. Jack Irons fait une dépression et quitte le groupe. John Frusciante, un grand fan des Red Hot Chili Peppers, est engagé pour remplacer Slovak, tandis que Chad Smith officie en tant que nouveau batteur. Dès 1989, le groupe enregistre Mother's Milk, qui lui confère une notoriété internationale. En 1991, le quatuor change de label pour Warner Bros Records et entame une longue collaboration avec le producteur Rick Rubin. Le groupe atteint la consécration avec la sortie de l'album Blood Sugar Sex Magik et ses cinq singles, dont Give It Away, Under the Bridge et Suck My Kiss qui le propulsent sur des scènes à travers le monde. La tournée qui s'ensuit est marquée par le départ de John Frusciante, qui ne supporte pas cette notoriété soudaine et sombre dans la toxicomanie. Dave Navarro lui succède pour l'enregistrement de son unique album avec le groupe, One Hot Minute, en 1995. </p>
-        <p>Après plusieurs années de soins, Frusciante réintègre les Red Hot Chili Peppers en 1999, qui enregistrent Californication. L'album, qui comprend les singles Scar Tissue et Californication, est un nouveau succès international pour le groupe. Après les albums By The Way (2002) et Stadium Arcadium (2006) et la réussite de leurs tournées respectives, John Frusciante quitte de nouveau le groupe en 2009 pour se consacrer à ses projets personnels. Il est remplacé par un de ses amis, avec lequel il a collaboré au sein du groupe Ataxia, Josh Klinghoffer. Deux ans plus tard, le groupe publie I'm With You, le premier album avec Klinghoffer à la guitare, qui apporte de nouvelles influences musicales au groupe, avec l'incorporation d'éléments de musique électronique. En 2016, après près de vingt ans de travail avec Rick Rubin, les Red Hot Chili Peppers changent de producteur et choisissent Danger Mouse pour l'enregistrement de l'album The Getaway. Le 15 décembre 2019, les RHCP annoncent le retour de John Frusciante pour remplacer Josh Klinghoffer. </p>
+        </div>
+        <p>Après la dissolution de What Is This?, le groupe réintègre ses membres originels et enregistre Freaky Styley
+            (1985) puis The Uplift Mofo Party Plan (1987). En 1988, Hillel Slovak meurt d'une surdose d'héroïne. Jack
+            Irons fait une dépression et quitte le groupe. John Frusciante, un grand fan des Red Hot Chili Peppers, est
+            engagé pour remplacer Slovak, tandis que Chad Smith officie en tant que nouveau batteur. Dès 1989, le groupe
+            enregistre Mother's Milk, qui lui confère une notoriété internationale. En 1991, le quatuor change de label
+            pour Warner Bros Records et entame une longue collaboration avec le producteur Rick Rubin. Le groupe atteint
+            la consécration avec la sortie de l'album Blood Sugar Sex Magik et ses cinq singles, dont Give It Away,
+            Under the Bridge et Suck My Kiss qui le propulsent sur des scènes à travers le monde. La tournée qui
+            s'ensuit est marquée par le départ de John Frusciante, qui ne supporte pas cette notoriété soudaine et
+            sombre dans la toxicomanie. Dave Navarro lui succède pour l'enregistrement de son unique album avec le
+            groupe, One Hot Minute, en 1995. </p>
+        <p>Après plusieurs années de soins, Frusciante réintègre les Red Hot Chili Peppers en 1999, qui enregistrent
+            Californication. L'album, qui comprend les singles Scar Tissue et Californication, est un nouveau succès
+            international pour le groupe. Après les albums By The Way (2002) et Stadium Arcadium (2006) et la réussite
+            de leurs tournées respectives, John Frusciante quitte de nouveau le groupe en 2009 pour se consacrer à ses
+            projets personnels. Il est remplacé par un de ses amis, avec lequel il a collaboré au sein du groupe Ataxia,
+            Josh Klinghoffer. Deux ans plus tard, le groupe publie I'm With You, le premier album avec Klinghoffer à la
+            guitare, qui apporte de nouvelles influences musicales au groupe, avec l'incorporation d'éléments de musique
+            électronique. En 2016, après près de vingt ans de travail avec Rick Rubin, les Red Hot Chili Peppers
+            changent de producteur et choisissent Danger Mouse pour l'enregistrement de l'album The Getaway. Le 15
+            décembre 2019, les RHCP annoncent le retour de John Frusciante pour remplacer Josh Klinghoffer. </p>
 
 
     </article>
