ajout css page formulaire

--- a/formulaire.html
+++ b/formulaire.html
@@ -32,19 +32,19 @@
         <div class="fieldsetForm_group">
             <div class="fieldsetForm_detail">
                 <label for="lastName">Nom :</label>
-                <input type="text" name="lastName" id="lastName">
+                <input type="text" name="lastName" id="lastName" placeholder="Nom" required>
             </div>
             <div class="fieldsetForm_detail">
                 <label for="firstName">Prénom :</label>
-                <input type="text" name="firstName" id="firstName">
+                <input type="text" name="firstName" id="firstName" placeholder="Prénom" required>
             </div>
             <div class="fieldsetForm_detail">
                 <label for="email">Email :</label>
-                <input type="email" name="email" id="email">
+                <input type="email" name="email" id="email" placeholder="Email" required>
             </div>
             <div class="fieldsetForm_detail">
                 <label for="password">Mot de passe :</label>
-                <input type="password" name="password" id="password">
+                <input type="password" name="password" id="password" placeholder="Mot de passe" required>
             </div>
 
 
@@ -53,11 +53,11 @@
         <div class="fieldsetForm_group">
             <div class="fieldsetForm_detail">
                 <label for="birthDate">Date de naissance :</label>
-                <input type="date" name="birthDate" id="birthDate">
+                <input type="date" name="birthDate" id="birthDate" required>
             </div>
             <div class="fieldsetForm_detail">
                 <label for="favoriteGroup">Groupe préféré :</label>
-                <select name="favoriteGroup" id="favoriteGroup">
+                <select name="favoriteGroup" id="favoriteGroup" required>
                     <option value="Red Hot Chili Peppers">Red Hot Chili Peppers</option>
                     <option value="Metallica">Metallica</option>
                     <option value="AC/DC">AC/DC</option>
@@ -70,11 +70,11 @@
             </div>
             <div class="fieldsetForm_detail">
                 <label for="phone">Téléphone :</label>
-                <input type="tel" name="phone" id="phone">
+                <input type="tel" name="phone" id="phone" placeholder="Numéro de téléphone" required>
             </div>
             <div class="fieldsetForm_detail">
                 <label for="passwordRepeat">Répéter le mot de passe :</label>
-                <input type="password" name="passwordRepeat" id="passwordRepeat">
+                <input type="password" name="passwordRepeat" id="passwordRepeat" placeholder="Mot de passe" required>
             </div>
         </div>
 
