--- a/index.html
+++ b/index.html
@@ -67,17 +67,24 @@
             s'ensuit est marquée par le départ de John Frusciante, qui ne supporte pas cette notoriété soudaine et
             sombre dans la toxicomanie. Dave Navarro lui succède pour l'enregistrement de son unique album avec le
             groupe, One Hot Minute, en 1995. </p>
-        <p>Après plusieurs années de soins, Frusciante réintègre les Red Hot Chili Peppers en 1999, qui enregistrent
-            Californication. L'album, qui comprend les singles Scar Tissue et Californication, est un nouveau succès
-            international pour le groupe. Après les albums By The Way (2002) et Stadium Arcadium (2006) et la réussite
-            de leurs tournées respectives, John Frusciante quitte de nouveau le groupe en 2009 pour se consacrer à ses
-            projets personnels. Il est remplacé par un de ses amis, avec lequel il a collaboré au sein du groupe Ataxia,
-            Josh Klinghoffer. Deux ans plus tard, le groupe publie I'm With You, le premier album avec Klinghoffer à la
-            guitare, qui apporte de nouvelles influences musicales au groupe, avec l'incorporation d'éléments de musique
-            électronique. En 2016, après près de vingt ans de travail avec Rick Rubin, les Red Hot Chili Peppers
-            changent de producteur et choisissent Danger Mouse pour l'enregistrement de l'album The Getaway. Le 15
-            décembre 2019, les RHCP annoncent le retour de John Frusciante pour remplacer Josh Klinghoffer. </p>
-
+        <div>
+            <img src="images/group.jpg" alt="membres red hot chili peppers" id="group-rhcp">
+            <p>Après plusieurs années de soins, Frusciante réintègre les Red Hot Chili Peppers en 1999, qui enregistrent
+                Californication. L'album, qui comprend les singles Scar Tissue et Californication, est un nouveau succès
+                international pour le groupe. Après les albums By The Way (2002) et Stadium Arcadium (2006) et la
+                réussite
+                de leurs tournées respectives, John Frusciante quitte de nouveau le groupe en 2009 pour se consacrer à
+                ses
+                projets personnels. Il est remplacé par un de ses amis, avec lequel il a collaboré au sein du groupe
+                Ataxia,
+                Josh Klinghoffer. Deux ans plus tard, le groupe publie I'm With You, le premier album avec Klinghoffer à
+                la
+                guitare, qui apporte de nouvelles influences musicales au groupe, avec l'incorporation d'éléments de
+                musique
+                électronique. En 2016, après près de vingt ans de travail avec Rick Rubin, les Red Hot Chili Peppers
+                changent de producteur et choisissent Danger Mouse pour l'enregistrement de l'album The Getaway. Le 15
+                décembre 2019, les RHCP annoncent le retour de John Frusciante pour remplacer Josh Klinghoffer. </p>
+        </div>
 
     </article>
     <div id="infosGroup">
