--- a/formulaire.html
+++ b/formulaire.html
@@ -25,6 +25,15 @@
     </div>
 </header>
 <hr>
+<nav>
+    <ul>
+        <li><a href="index.html">Accueil</a></li>
+        <li><a href="formulaire.html">Formulaire</a></li>
+        <li><a href="jeux.html">Jeux</a></li>
+        <li><a href="musiques.html">Musiques</a></li>
+    </ul>
+</nav>
+<hr>
 <form action="post">
     <h3>Mon compte</h3>
     <fieldset class="fieldsetForm">
